@@ -2,6 +2,10 @@
 	* src/browser.c (browser_refresh): Take the distant possibility of
 	terabyte files into account, and in the bargain get rid of the need
 	to calculate the number of digits in UINT_MAX.
+	* src/files.c (get_next_filename): Limit the number of backup files
+	to one hundred thousand -- which should be far more than enough --
+	before finding a unused filename takes an annoying amount of time.
+	* src/utils.c (digits): Delete this now unneeded function.
 
 2015-05-03  Benno Schulenberg  <bensberg@justemail.net>
 	* src/browser.c (browser_refresh): Display an ellipsis only when the
